commented out flooding_legend_list that's unknown and I cannot find it anywhere either

--- a/lizard_flooding/templates/flooding/legend_list.html
+++ b/lizard_flooding/templates/flooding/legend_list.html
@@ -29,7 +29,7 @@ Legend list
   No legends!
   {% endif %}
   {% if has_edit_permission %}
-  <li><a href="{% url flooding_legend_add %}?next={% url flooding_legend_list %}">add</a></li>
+  <li><a href="{% url flooding_legend_add %}?next={# url flooding_legend_list #}">add</a></li>
   {% endif %}
 </ul>
 {% endblock %}
