--- a/lizard_flooding/templates/flooding/index.html
+++ b/lizard_flooding/templates/flooding/index.html
@@ -13,13 +13,16 @@ Lizard-flooding: Main
 
 <p>
 	{% trans 'Welcome to Lizard-flooding. Follow one of the links below:' %}
+        <!--
+            BROKEN STUFF, USE LIZARD BASE
 	<ul>
 		<li><a href="{% url flooding_result_list %}">{% trans 'Results' %}</a></li>
 		<li><a href="{% url flooding_projects_url %}">{% trans 'Projects' %}</a></li>
 		<li><a href="{% url flooding_scenarios_url %}">{% trans 'Scenarios' %}</a></li>
-		<!--<li><a href="{# url flooding_legend_list #}">{% trans 'Legends' %}</a></li>-->
+		<li><a href="{# url flooding_legend_list #}">{% trans 'Legends' %}</a></li>
 		<li><a href="{% url flooding_task_list %}">{% trans 'Tasks' %}</a></li>
 	</ul>
+        -->
 </p>
 
 {% endblock %}
