--- a/lizard_flooding/templates/flooding/compose_scenario.html
+++ b/lizard_flooding/templates/flooding/compose_scenario.html
@@ -425,6 +425,14 @@
             type: "checkbox",
             required: true,
             showIf: "form.getValue('showAdvancedSettings') == true",
+            changed: function(form, item, value){
+                if (value == true) {
+                	//buttonGetGraph.setDisabled(true);
+        	
+                } else {
+                  	//buttonGetGraph.setDisabled(false);   
+                }
+            },
             defaultValue: false,
             endRow:true,
             min: 0.1,
@@ -443,13 +451,6 @@
             colSpan: 2, width: 300, height: 50
         },
         {
-            name: "manualTimeserie",
-            _constructor: "HiddenItem",
-            defaultValue: "",
-            width: 0,
-           
-        },
-        {
             name: "buttonLoadWaterlevels",
             title: "Download buitenwaterstand",
             _constructor: "ButtonItem",
@@ -463,21 +464,8 @@
                 
                 window.open(get_waterlevel_csv_url());
             }
-        },
-        {
-            name: "processWaterlevels",
-            title: "verwerk handinvoer ",
-            _constructor: "ButtonItem",
-            showRollOver: false,
-            //showDown: true,
-            showFocused: false,
-            colSpan: 1,
-            width: 150,
-            showIf: "form.getValue('showAdvancedSettings') == true",
-            click: function(form, item){
-                //TO DO
-            }
         }
+
         {% endif %}
         ],
         //canDragResize: true,
@@ -552,7 +540,9 @@
 			args.action = 'get_externalwater_graph';
 			{% if sea %}
 			if (formScenarioSettings.getValue('useManualInput') == true) {
-				args.timeserie = formScenarioSettings.getValue('manualTimeserie');		
+				args.useManualInput = formScenarioSettings.getValue('useManualInput');
+				args.timeserie = formScenarioSettings.getValue('waterlevelInput').replace('\r\n','\n').replace('\n','|');
+						
 			}
 			{% endif %}
 			var url = '{% url root_url %}flooding/service/?';
@@ -564,7 +554,39 @@
 					url+= elem + '=' + args[elem]
 				}
 			}
-      		scGraph.setSrc(url)
+			
+			RPCManager.sendRequest({
+							 actionURL: '{% url root_url %}flooding/service/',
+							 useSimpleHttp: true,
+							 showPrompt:true,	    					 					 
+							 httpMethod: "POST",			 
+							 params: {action: 'get_externalwater_graph', 
+							 		  width: args.width,
+            						  height: args.height,
+            						  breach_id: args.breach_id,
+            						  ewtmaxleve: args.ewtmaxlevel,
+            						  tpeak: args.tpeak,
+            						  tstorm: args.tstorm,
+            						  tsim: args.tsim,
+            						  tstartbreach: args.tstartbreach,
+            						  tdeltaphase: args.tdeltaphase,
+            						  tide_id: args.tide_id,
+            						  extwbaselevel: args.extwbaselevel,
+            						  use_manual_input: args.useManualInput,
+            						  timeserie: args.timeserie}, 
+							 callback: function(response, data, request){
+				                if (response.httpResponseCode == 200) {				                	
+				                    console.log("Data ophalen gelukt.")																		                    	                                   
+				                	} 
+				                	else {				                    
+				                    console.log("Fout bij het ophalen van gegevens.");                   
+				                	}
+				                }
+				        });			
+				        
+				        
+				        
+      		scGraph.setSrc('{% url root_url %}flooding/service/?action=get_externalwater_graph_session')
       	} else {
       		//do nothing
       	}
@@ -585,11 +607,6 @@
 		args.extwbaselevel = formScenarioSettings.getValue('extwbaselevel');
               
 		args.action = 'get_externalwater_csv';
-		{% if sea %}
-		if (formScenarioSettings.getValue('useManualInput') == true) {
-			args.timeserie = formScenarioSettings.getValue('manualTimeserie');		
-		}
-		{% endif %}
 		var url = '{% url root_url %}flooding/service/?';
                		
 		var first = true;
