Fixed bugs voor het laden van maatregelen: - Bij geen maatregel geselecteerd crasht 'ie niet meer (het scherm blijft wel open, totdat iemand iets gekozen heeft) - Het veld 'opslaan maatregel set' is niet meer verplicht - Eerst aan en dan uitvinken toont het zelfde gedrag als nooit aangevinkt (verschil tussen undefined en false opgelost server-side)

--- a/lizard_flooding/templates/flooding/compose_scenario.html
+++ b/lizard_flooding/templates/flooding/compose_scenario.html
@@ -470,7 +470,7 @@
             name: "saveStrategy",
             title: "Sla maatregelen aan keringen op",
             type: "checkbox",
-            required: true,
+            required: false,
             endRow: true,
             showIf: "form.getValue('showAdvancedSettings') == true",
             changed: function(form, item, value){
