--- a/lizard_flooding/tools/importtool/templates/import/groupimport_new.html
+++ b/lizard_flooding/tools/importtool/templates/import/groupimport_new.html
@@ -12,9 +12,9 @@
 		<BR>
 
 		<ul>
-		<li><a href="{{ STATIC_URL }}/examples/Groupimport_type1.xls">Voorbeeld Excel groepimport type 1</a></li>
-		<li><a href="{{ STATIC_URL }}/examples/Groupimport_type2.xls">Voorbeeld Excel groepimport type 2</a></li>
-		<li><a href="{{ STATIC_URL }}/examples/Groupimport_type3.xls">Voorbeeld Excel groepimport type 3</a></li>
+		<li><a href="/static_media/examples/Groupimport_type1.xls">Voorbeeld Excel groepimport type 1</a></li>
+		<li><a href="/static_media/examples/Groupimport_type2.xls">Voorbeeld Excel groepimport type 2</a></li>
+		<li><a href="/static_media/examples/Groupimport_type3.xls">Voorbeeld Excel groepimport type 3</a></li>
 		</ul>
 
 		<BR>
