Use simplejson to prevent quoting issues with generated Javascript values

--- a/flooding_lib/tools/importtool/templates/import/import_scenario.html
+++ b/flooding_lib/tools/importtool/templates/import/import_scenario.html
@@ -58,7 +58,7 @@
         ID: "helptext",
         autodraw: true,
         padding: 15,
-        contents: "{% autoescape off %}{{ legend_html }}{% endautoescape %}"
+        contents: {% autoescape off %}{{ legend_html_json }}{% endautoescape %}
     });
 
     isc.DataSource.create({
