--- a/flooding_lib/tools/importtool/templates/import/groupimport_new.html
+++ b/flooding_lib/tools/importtool/templates/import/groupimport_new.html
@@ -12,9 +12,9 @@
 		<BR>
 
 		<ul style="list-style-type: none;">
-		<li><a href="/static_media/examples/Groupimport_type1.xls">Voorbeeld Excel groepimport type 1</a> Scenario's met een overstroming als gevolg van doorbraak in een primaire kering.</li>
-		<li><a href="/static_media/examples/Groupimport_type2.xls">Voorbeeld Excel groepimport type 2</a> Scenario's met een overstroming als gevolg van doorbraak in een genormeerde regionale kering.</li>
-		<li><a href="/static_media/examples/Groupimport_type3.xls">Voorbeeld Excel groepimport type 3</a> Scenario's met een overstroming van niet door genormeerde keringen beschermd gebied (zowel hoofdwater als regionaal water).</li>
+		<li><a href="/static_media/examples/Groupimport_type1.xls">Voorbeeld Excel groepimport type 1</a> Scenario's van overstromingen als gevolg van een doorbraak in een primaire kering.</li>
+		<li><a href="/static_media/examples/Groupimport_type2.xls">Voorbeeld Excel groepimport type 2</a> Scenario's van overstromingen als gevolg van een doorbraak in een genormeerde regionale kering.</li>
+		<li><a href="/static_media/examples/Groupimport_type3.xls">Voorbeeld Excel groepimport type 3</a> Scenario's van overstromingen van niet door genormeerde keringen beschermd gebied (zowel hoofdwater als regionaal water).</li>
 		</ul>
 
 		<BR>
