- Changed scenario fields to null=True to make testing easier
- Added ScenarioProject model

- Changed most of them to new, tested functions

--- a/flooding_lib/templates/flooding/project_detail.html
+++ b/flooding_lib/templates/flooding/project_detail.html
@@ -1,8 +1,9 @@
 {% extends "lizard/base.html" %}
 
 {% comment %}
-20090212 k.k.ha template for scenario view 
+20090212 k.k.ha template for scenario view
 object has to be a Project
+PROJECT KOALA
 {% endcomment %}
 
 {% load i18n %}
