Fix templates for new situation

--- a/flooding_lib/templates/flooding/project_detail.html
+++ b/flooding_lib/templates/flooding/project_detail.html
@@ -3,7 +3,6 @@
 {% comment %}
 20090212 k.k.ha template for scenario view
 object has to be a Project
-PROJECT KOALA
 {% endcomment %}
 
 {% load i18n %}
@@ -15,7 +14,7 @@ Lizard-flooding: Project {{ object.name }}
 {% block content %}
 <h2>{{ object.name }}</h2>
 <ul>
-  {% for s in object.scenario_set.all %}
+  {% for s in object.all_scenarios %}
   <li><a href="{% url flooding_scenario_detail object_id=s.id %}">{{ s.name }}</a></li>
   {% endfor %}
 </ul>
