--- a/flooding_lib/templates/flooding/scenario_list.html
+++ b/flooding_lib/templates/flooding/scenario_list.html
@@ -17,13 +17,16 @@ Lizard-flooding: {% trans 'Scenarios' %}
 {% block content %}
 <script type="text/javascript" src="{% url root_url %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
 
+{% if can_approve %}
+<p><a href="{% url flooding_scenario_share_list %}">{% trans "Offer or accept a scenario for sharing" %}</a></p>
+{% endif %}
 <h1>{% trans 'Scenario list' %}</h1>
 <p>
 	<div  style="overflow:auto">
 		{% search search_fields %}
 		<a href="{% url flooding_scenario_add %}"><img src="{% url root_url %}static_media/images/icons/add.png" title="{% trans 'create scenario' %}"/></a>
 		<a href="{% url flooding_scenarios_url %}?format=csv">{% trans 'Export as CSV' %}</a>
-		{% objecttable name table_columns table_data fields.sort %}		
+		{% objecttable name table_columns table_data fields.sort %}
 		{% digg_paginator fields %}
 		<script type="text/javascript">
 		  function updateBreaches() {
