Move the 'approvalobject' field from Scenario to ScenarioProject, so that Scenarios can have different approval objects for each of the projects they're in.
Adjust the functions that get and set approval.

Add migrations that add the field on the new model, migrate the data,
then remove the field from the old model.

--- a/flooding_lib/templates/flooding/scenario_accept_list.html
+++ b/flooding_lib/templates/flooding/scenario_accept_list.html
@@ -26,7 +26,7 @@ Flooding: {% trans 'Accept scenarios' %}
             <tr>
 	      <td>{{ scenario.scenario.id }}</td>
 	      <td>{{ scenario.scenario.name }}</td>
-	      <td>{{ scenario.scenario.status_cache }}</td>
+	      <td>{{ scenario.scenario.get_status_cache_display }}</td>
               <td>{{ scenario.shared_by.username }}</td>
 	      <td><a href="#" class="shareaction"
 		     data-action="accept"
