--- a/flooding_lib/templates/flooding/scenario_share_list.html
+++ b/flooding_lib/templates/flooding/scenario_share_list.html
@@ -28,7 +28,7 @@ Flooding: {% trans 'Share scenarios' %}
             <tr>
 	      <td>{{ scenario.scenario.id }}</td>
 	      <td>{{ scenario.scenario.name }}</td>
-	      <td>{{ scenario.scenario.status_cache }}</td>
+	      <td>{{ scenario.scenario.get_status_cache_display }}</td>
 	      {% for extrafield in scenario.extra_fields %}
 	      <td>
 		<a class="shareaction"
