Improved the scenario sharing pages.
Approvers of scenarios that they have offered to other projects can
now see the status of their scenarios' approvals in those other
projects.

If a scenario is now approved on some rules and not yet judged on
others (their value is null), it is now neither approved nor
disapproved. Used to be disapproved in this situation. A scenario is
disapproved if its success value is False for at least one of the
rules.

Improved translations.

--- a/flooding_lib/templates/flooding/scenario_accept_list.html
+++ b/flooding_lib/templates/flooding/scenario_accept_list.html
@@ -28,10 +28,10 @@ Flooding: {% trans 'Accept scenarios' %}
 	      <td>{{ scenario.scenario.name }}</td>
 	      <td>{{ scenario.scenario.get_status_cache_display }}</td>
               <td>{{ scenario.shared_by.username }}</td>
-	      <td><a href="#" class="shareaction"
-		     data-action="accept"
-		     data-scenario-id="{{ scenario.scenario.id }}"
-		     data-project-id="{{ toproject.id }}">Accept</a></td>
+	      <td class="shareaction"
+		  data-action="accept"
+		  data-scenario-id="{{ scenario.scenario.id }}"
+		  data-project-id="{{ toproject.id }}"><a href="#">Accept</a></td>
             </tr>
 	    {% endfor %}
 	  </table>
