--- a/flooding_lib/tools/importtool/templates/import/import_scenario.html
+++ b/flooding_lib/tools/importtool/templates/import/import_scenario.html
@@ -59,7 +59,7 @@
         ID: "helptext",
         autodraw: true,
         padding: 15,
-        contents: {% autoescape off %}{{ legend_html_json }}{% endautoescape %}
+        contents: {{ legend_html_json }}
     });
 {% endif %}
 
